syntax = "proto3";

option go_package = "/app";

service ICache {
  rpc Get(GetCommand) returns (GetResult) {}
  rpc Set(SetCommand) returns (SetResult) {}
  rpc Del(DelCommand) returns (DelResult) {}
}

message GetCommand {
  string key = 1;
}

message GetResult {
  string key = 1;
  string value = 2;
}

message SetCommand {
  string key = 1;
  string value = 2;
}

message SetResult {
  string key = 1;
  bool done = 2;
}

message DelCommand {
  string key = 1;
}

message DelResult {
  string key = 1;
  bool done = 2;
}